--- a/news_slider.html
+++ b/news_slider.html
@@ -53,6 +53,10 @@
             padding: 15px;
         }
 
+        #news-cd{
+            width : 10%;
+            height : 10%;
+        }
         /* Card Styling */
         .news-card {
             width: 100%;
